--- a/introduction.tex
+++ b/introduction.tex
@@ -18,13 +18,13 @@ The Vassiliev invariants are functions on the chambers of the strata (the knots)
 Chapter \ref{ch:vassiliev-invariants-and-chord-diagrams} reviews the theory of Vassiliev invariants, with attention given to the particularly fruitful polynomial analogy first made by Bar--Natan in \cite{on-the-vassiliev-knot-invariants}.
 The set of all Vassiliev invariants \(\mathcal{V}\) has the structure of a filtered bialgebra, and its product and coproduct mirror those of the filtered bialgebra of polynomial functions on the real line.
 
-The most important result of the Chapter is the fundamental theorem of Vassiliev invariants --- a corollary of the work of Kontsevich \cite{vassilievs-knot-invariants} --- which states that the bialgebra of Vassiliev invariants is effectively described by its associated graded bialgebra \(\mathcal{A}\) of chord diagrams. Once again, this fits neatly into an analogy with polynomials in which elements of \(\mathcal{A}\) are likened with constants of integration. Indeed, any polynomial function of degree \(m\) on the real line can be constructed as a definite integral of the zero function \(m\) times by making some specific choice of the constant of integration in each of the \(m\) definite integrals. This choice of constants at every stage completely describes the polynomial. An arbitrary Vassiliev invariant is described by the algebra \(\mathcal{A}\) of chord diagrams in an analogous way.
+The most important result of the Chapter is the fundamental theorem of Vassiliev invariants --- a corollary of the work of Kontsevich \cite{vassilievs-knot-invariants} --- which states that the bialgebra of Vassiliev invariants is effectively described by its associated graded bialgebra, the algebra \(\mathcal{A}\) of chord diagrams. Once again, this fits neatly into an analogy with polynomials in which elements of \(\mathcal{A}\) are likened with constants of integration. Indeed, any polynomial function of degree \(m\) on the real line can be constructed as a definite integral of the zero function \(m\) times by making some specific choice of the constant of integration in each of the \(m\) definite integrals. This choice of constants at every stage completely describes the polynomial. An arbitrary Vassiliev invariant is described by the algebra \(\mathcal{A}\) of chord diagrams in an analogous way.
 
 In Chapter \ref{ch:lie-theory-and-jacobi-diagrams}, the structure of the algebra \(\mathcal{A}\) is examined. The relations in this algebra have a Lie algebraic flavour, and as such a classical construction of Bar-Natan takes a metric Lie algebra and produces a functional on \(\mathcal{A}\), known as a weight system. By the fundamental theorem of the previous chapter this yields a class of Vassiliev invariants. We showcase this construction by computing, following Yang \cite{on-values-of-sl3-weight-system-on-chord-diagrams-whose-intersection-graph-is-complete-bipartite}, the values of the functional associated with the exceptional Lie algebra \(\mathfrak{g}_{2}\) on an infinite family of chord diagrams.
 
-Somewhat surprisingly, not all Vassiliev invariants arise from this construction, and a more general construction is required which takes not just Lie (super)algebras but Lie algebra objects in arbitrary symmetric monoidal categories. We review a classical theorem of Hinich--Vaintrob from \cite{cyclic-operads-and-the-algebra-of-chord-diagrams} that every Vassiliev invariant is recovered by this more general construction from some Lie algebra object in some symmetric monoidal category. However, this result does not shed light on what type of symmetric monoidal category suffices to construct all Vassiliev invariants in this way.
+Somewhat surprisingly, not all Vassiliev invariants arise from this construction, and a more general construction is required which takes not just Lie (super)algebras but Lie algebra objects in arbitrary symmetric monoidal categories. We review a classical theorem of Hinich--Vaintrob from \cite{cyclic-operads-and-the-algebra-of-chord-diagrams} that every Vassiliev invariant is recovered by this more general construction which takes as input some Lie algebra object in some symmetric monoidal category. However, this result does not shed light onto which type of symmetric monoidal categories' Lie algebra objects product more Vassiliev invariants than simply Lie algebras.
 
-The focus of Chapter \ref{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams} is welded long knots, a type of two-dimensional knotted object in four-dimensional space. Welded long knots also have a theory of Vassiliev invariants and a corresponding version of \(\mathcal{A}\), known as the bialgebra of arrow diagrams \(\mathcal{A}_{w}\). Just as the structure of \(\mathcal{A}\) is Lie algebraic in nature, in a similar way \(\mathcal{A}_{w}\) has structure reminiscent of the cocommutative Drinfeld double of a Lie algebra. We prove a Hinich--Vaintrob style theorem in the theory of welded long knots. This gives an alternative to a result which follows from the work Bar-Natan--Dancso: that for welded long knots, taking Lie algebra objects in the symmetric monoidal category \(\mathbf{sVect}\) of supervector spaces suffices to construct all Vassiliev invariants.
+The focus of Chapter \ref{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams} is welded long knots, a type of two-dimensional knotted object in four-dimensional space. Welded long knots also have a theory of Vassiliev invariants and a corresponding version of \(\mathcal{A}\), known as the bialgebra of arrow diagrams \(\mathcal{A}_{w}\). Just as the structure of \(\mathcal{A}\) is Lie algebraic in nature, in a similar way \(\mathcal{A}_{w}\) has structure reminiscent of the cocommutative Drinfeld double of a Lie algebra. We prove a Hinich--Vaintrob style theorem in the theory of welded long knots. This gives an alternative proof of the fact just like for classical knots, that every Vassiliev invariant of welded long knots comes from a Lie algebra object in a symmetric monoidal category. This fact is also a corollary of the work Bar-Natan--Dancso \cite{finite-type-invariants-of-w-knotted-objects-I-w-knots-and-the-alexander-polynomial}, in fact it follows from their work that taking Lie algebra objects in the symmetric monoidal category \(\mathbf{sVect}\) of supervector spaces suffices to construct all Vassiliev invariants of welded long knots.
 
 \section*{Conventions}
 
